fixed #menu-toggle visibility issue

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -112,7 +112,6 @@ header {
         grid-area: menu-toggle;
         position: relative;
         top: 0;
-        right: -5rem;
         
         &:hover {
             opacity: 0.5;
